--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,19 +2,19 @@
     <string name="app_name">MOCA</string>
     <string name="api_key">371605789c884c61b94dbd92d9121867</string>
     <string-array name="tags">
-        <item>main course</item>
-        <item>side dish</item>
-        <item>dessert</item>
-        <item>appetizer</item>
-        <item>salad</item>
-        <item>bread</item>
-        <item>breakfast</item>
-        <item>soup</item>
-        <item>beverage</item>
-        <item>sauce</item>
-        <item>marinade</item>
-        <item>fingerfood</item>
-        <item>snack</item>
-        <item>drink</item>
+        <item>Main course</item>
+        <item>Side dish</item>
+        <item>Dessert</item>
+        <item>Appetizer</item>
+        <item>Salad</item>
+        <item>Bread</item>
+        <item>Breakfast</item>
+        <item>Soup</item>
+        <item>Beverage</item>
+        <item>Sauce</item>
+        <item>Marinade</item>
+        <item>Fingerfood</item>
+        <item>Snack</item>
+        <item>Drink</item>
     </string-array>
 </resources>
