monday commit 2 pm

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
         <item>dessert</item>
         <item>appetizer</item>
         <item>salad</item>
-        <item>sread</item>
+        <item>bread</item>
         <item>breakfast</item>
         <item>soup</item>
         <item>beverage</item>
